# pilot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  pilot.sh  pilot.yaml  pyproject.toml
examples/code-review/: pilot.yaml
examples/code-review/prompts/: review-code.md  write-code.md
examples/code-review/scripts/: mock-agent.sh
examples/code-review/tasks/: 001-add-utils.md  002-add-validation.md
pilot/: __init__.py  __main__.py  agents.py  cli.py  config.py  engine.py  git.py  models.py  progress.py  session.py  signals.py  templates.py
pilot/defaults/: README.md  protocol.md
pilot/defaults/agents/: analyst-architect.md  analyst-architecture.md  analyst-devops.md  analyst-pm.md  analyst-product.md  analyst-qa.md  analyst-quality.md  analyst-ux.md  documentation.md  implementation.md  quality.md  review-quality.md  review-spec.md  review-testing.md  simplification.md  testing.md
pilot/defaults/templates/develop/: input.md  pipeline.yaml
pilot/defaults/templates/develop/prompts/: analyze.md  claude-implement.md  claude-review.md  codex-review.md  fix.md  implement.md  plan.md  prd.md  review.md
pilot/executors/: __init__.py  claude.py  codex.py  custom.py  generic.py  result.py  shell.py
pilot/tests/: test_agents.py  test_cli.py  test_config.py  test_engine.py  test_executors.py  test_git.py  test_init.py  test_progress.py  test_session.py  test_signals.py  test_templates.py
prompts/: gsd.md
scripts/: init-docker.sh  pilot-docker.py  pilot-docker.sh
